# roaring-rs

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  Cargo.toml  LICENSE  README.md  build.rs  index.html  loop_qc.sh  params.json  publish_docs.sh  save_credentials.sh
benchmarks/: .gitignore  Cargo.toml  build.rs
benchmarks/benches/: datasets.rs  datasets_paths.rs  lib.rs
benchmarks/benches/datasets/: mod.rs
benchmarks/datasets/: README.md  dictionary
benchmarks/datasets/census-income/: census-income.001.bin.zst  census-income.002.bin.zst  census-income.003.bin.zst  census-income.004.bin.zst  census-income.005.bin.zst  census-income.006.bin.zst  census-income.008.bin.zst  census-income.009.bin.zst  census-income.010.bin.zst  census-income.011.bin.zst  census-income.012.bin.zst  census-income.013.bin.zst  census-income.014.bin.zst  census-income.016.bin.zst  census-income.020.bin.zst  census-income.021.bin.zst  census-income.023.bin.zst  census-income.025.bin.zst  census-income.026.bin.zst  census-income.027.bin.zst  census-income.028.bin.zst  census-income.029.bin.zst  census-income.030.bin.zst  census-income.031.bin.zst  census-income.032.bin.zst  census-income.033.bin.zst  census-income.034.bin.zst  census-income.035.bin.zst  census-income.036.bin.zst  census-income.037.bin.zst  census-income.038.bin.zst  census-income.039.bin.zst  census-income.040.bin.zst  census-income.041.bin.zst  census-income.044.bin.zst  census-income.046.bin.zst  census-income.047.bin.zst  census-income.048.bin.zst  census-income.049.bin.zst  census-income.052.bin.zst  (+98 more)
benchmarks/datasets/census-income_srt/: census-income_srt.000.bin.zst  census-income_srt.001.bin.zst  census-income_srt.002.bin.zst  census-income_srt.003.bin.zst  census-income_srt.004.bin.zst  census-income_srt.006.bin.zst  census-income_srt.008.bin.zst  census-income_srt.010.bin.zst  census-income_srt.011.bin.zst  census-income_srt.012.bin.zst  census-income_srt.013.bin.zst  census-income_srt.014.bin.zst  census-income_srt.016.bin.zst  census-income_srt.017.bin.zst  census-income_srt.020.bin.zst  census-income_srt.021.bin.zst  census-income_srt.025.bin.zst  census-income_srt.026.bin.zst  census-income_srt.027.bin.zst  census-income_srt.028.bin.zst  census-income_srt.029.bin.zst  census-income_srt.030.bin.zst  census-income_srt.032.bin.zst  census-income_srt.033.bin.zst  census-income_srt.034.bin.zst  census-income_srt.035.bin.zst  census-income_srt.036.bin.zst  census-income_srt.037.bin.zst  census-income_srt.038.bin.zst  census-income_srt.039.bin.zst  census-income_srt.040.bin.zst  census-income_srt.041.bin.zst  census-income_srt.042.bin.zst  census-income_srt.044.bin.zst  census-income_srt.046.bin.zst  census-income_srt.047.bin.zst  census-income_srt.048.bin.zst  census-income_srt.049.bin.zst  census-income_srt.050.bin.zst  census-income_srt.052.bin.zst  (+100 more)
benchmarks/datasets/census1881/: census1881.000.bin.zst  census1881.001.bin.zst  census1881.002.bin.zst  census1881.003.bin.zst  census1881.004.bin.zst  census1881.005.bin.zst  census1881.006.bin.zst  census1881.007.bin.zst  census1881.008.bin.zst  census1881.009.bin.zst  census1881.010.bin.zst  census1881.011.bin.zst  census1881.012.bin.zst  census1881.013.bin.zst  census1881.014.bin.zst  census1881.015.bin.zst  census1881.016.bin.zst  census1881.017.bin.zst  census1881.018.bin.zst  census1881.019.bin.zst  census1881.020.bin.zst  census1881.021.bin.zst  census1881.022.bin.zst  census1881.023.bin.zst  census1881.024.bin.zst  census1881.025.bin.zst  census1881.026.bin.zst  census1881.027.bin.zst  census1881.028.bin.zst  census1881.029.bin.zst  census1881.030.bin.zst  census1881.031.bin.zst  census1881.032.bin.zst  census1881.033.bin.zst  census1881.034.bin.zst  census1881.035.bin.zst  census1881.036.bin.zst  census1881.037.bin.zst  census1881.038.bin.zst  census1881.039.bin.zst  (+159 more)
benchmarks/datasets/census1881_srt/: census1881_srt.000.bin.zst  census1881_srt.001.bin.zst  census1881_srt.002.bin.zst  census1881_srt.003.bin.zst  census1881_srt.004.bin.zst  census1881_srt.005.bin.zst  census1881_srt.006.bin.zst  census1881_srt.007.bin.zst  census1881_srt.008.bin.zst  census1881_srt.009.bin.zst  census1881_srt.010.bin.zst  census1881_srt.011.bin.zst  census1881_srt.012.bin.zst  census1881_srt.013.bin.zst  census1881_srt.014.bin.zst  census1881_srt.015.bin.zst  census1881_srt.016.bin.zst  census1881_srt.017.bin.zst  census1881_srt.018.bin.zst  census1881_srt.019.bin.zst  census1881_srt.020.bin.zst  census1881_srt.021.bin.zst  (+177 more)
benchmarks/src/: lib.rs
bindings/: Cargo.toml
bindings/src/: lib.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: against_croaring.rs
roaring/: Cargo.toml
roaring/src/: lib.rs
roaring/tests/: allocative.rs  clone.rs  difference_with.rs  intersect_with.rs  is_disjoint.rs  is_subset.rs  iter.rs  iter_advance_to.rs  iter_next_many.rs  iter_next_range.rs  iter_range.rs  lib.rs  ops.rs  push.rs  range.rs  range_checks.rs  rank.rs  select.rs  serialization.rs  size_hint.rs  symmetric_difference_with.rs  treemap_clone.rs  treemap_difference_with.rs  treemap_intersect_with.rs  treemap_is_disjoint.rs  treemap_is_subset.rs  treemap_iter_advance_to.rs  treemap_lib.rs  treemap_range_checks.rs  treemap_select.rs  treemap_serialization.rs  treemap_size_hint.rs  treemap_symmetric_difference_with.rs  treemap_union_with.rs  union_with.rs
(+2227 files in other folders)
