[workspace]
members = ["roaring", "benchmarks"]
resolver = "2"

[workspace.dependencies]
roaring = { path = "roaring" }

bincode = "1.3.3"
bytemuck = "1.16.1"
byteorder = "1.5.0"
criterion = "0.3"
git2 = { version = "0.19", default-features = false }
indicatif = "0.17"
itertools = "0.13"
once_cell = "1.9"
proptest = "1.5.0"
serde = "1.0.203"
serde_json = "1.0.120"
zip = { version = "0.6", default-features = false }

[profile.test]
opt-level = 2
