[workspace]
members = [ "benchmarks", "roaring" ]
resolver = "2"

[workspace.dependencies]
roaring = { path = "roaring" }

bytemuck = "1.21.0"
byteorder = "1.5.0"
criterion = "0.5"
git2 = { version = "0.20", default-features = false }
indicatif = "0.17"
itertools = "0.14"
once_cell = "1.20"
postcard = { version = "1.1", features = [ "alloc" ] }
proptest = "1.6.0"
serde = "1.0.217"
serde_json = "1.0.138"
zip = { version = "0.6", default-features = false }

[profile.test]
opt-level = 2
