[package]
name = "benchmarks"
description = "An external library for benchmarking the roaring crate with real datasets"
version = "0.1.0"
authors = ["Kerollmops <renault.cle@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
roaring = { path = ".." }

[dev-dependencies]
once_cell = "1.9.0"
git2 = "0.13.25"
zip = "0.5.13"
indicatif = "0.16.2"
criterion = { version = "0.3", features = ["html_reports"] }
quickcheck = "0.9"
quickcheck_macros = "0.9"

[features]
simd = ["roaring/simd"]

[[bench]]
name = "lib"
harness = false
