[package]
name = "benchmarks"
description = "An external library for benchmarking the roaring crate with real datasets"
version = "0.1.0"
authors = ["Kerollmops <renault.cle@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
roaring = { path = ".." }

[dev-dependencies]
once_cell = "1.9"
git2 = { version = "0.13", default-features = false, features = ["https", "vendored-openssl"] }
zip = { version = "0.5", default-features = false, features = ["deflate"] }
indicatif = "0.16"
criterion = { version = "0.3", features = ["html_reports"] }
itertools = "0.10"

[features]
simd = ["roaring/simd"]

[[bench]]
name = "lib"
harness = false
