[package]
name = "roaring-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = { version = "0.4.9", features = ["arbitrary-derive"] }
roaring = { path = "../roaring" }
croaring = "2.0"

[features]
simd = ["roaring/simd"]

[[bin]]
name = "against_croaring"
path = "fuzz_targets/against_croaring.rs"
test = false
doc = false
bench = false

[workspace]
